--- a/History.rdoc
+++ b/History.rdoc
@@ -1,8 +1,14 @@
 === 3.0.0 / 2017-02-27
 
-* 1 major enhancement
+* 2 major enhancement
 
-  * Changed place of config file to XDG standard
+  * TP#203: Changed place of config file to XDG standard
+    * TP#207: Added install_config task to Rakefile
+    * TP#207: Added XDG dependency and changed place of config (lib/import_config.rb)
+  * TP#202: Added manpage (Changes in Rakefile)
+    * TP#206: Added Rake task :manpage and :manpage and :manpage_register. The last one
+              will be executed each time, where :setup runs.
+    * TP#209: Added a youtube_dlhelper.xml
 
 === 2.0.4 / 2017-02-23
 
